cmake_minimum_required(VERSION 2.8)
option(CUDA_USE_STATIC_CUDA_RUNTIME "use static runtime" OFF)

SET(CMAKE_MODULE_PATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_SUBDIR}"  ${CMAKE_MODULE_PATH})

SET(CUDA_VERBOSE_BUILD ON)
SET(ANDROID_STL gnustl_shared)
SET(ANDROID_NATIVE_API_LEVEL 21)
SET(CWRAP_CUSTOM_LUA th)
SET(ANDROID_FORCE_ARM_BUILD ON)
SET(ANDROID_STL_FORCE_FEATURES OFF)
SET(HAS_GCC_ATOMICS_EXITCODE TRUE)
SET(C_HAS_inline_EXITCODE 0)
SET(C_HAS___inline___EXITCODE 0)
set( C_HAS___inline_EXITCODE 0)
ADD_SUBDIRECTORY(distro)
ADD_SUBDIRECTORY(src)
