CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Torch REQUIRED)

MESSAGE(STATUS "Including android directory: ${ANDROID_NDK_SYSROOT_INCLUDE}")
INCLUDE_DIRECTORIES(${ANDROID_NDK_SYSROOT_INCLUDE})
LINK_DIRECTORIES(${ANDROID_NDK_SYSROOT_LIBDIR})

SET(src init.c)
SET(luasrc init.lua)

ADD_TORCH_PACKAGE(torchandroid "${src}" "${luasrc}" "Torch Android plugins")
TARGET_LINK_LIBRARIES(torchandroid luaT TH android)
IF(LUALIB)
  TARGET_LINK_LIBRARIES(torchandroid ${LUALIB})
ENDIF()

INSTALL(FILES
	init.lua
        DESTINATION "${CMAKE_INSTALL_PREFIX}/share/lua/5.1/torchandroid"	
)

INSTALL(FILES
  THApkFile.h
  DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
)
