# We compile our own custom Lua
SET(Lua_IS_SUBPROJECT ON)
SET(Lua_INSTALL_BIN_SUBDIR "${Torch_INSTALL_BIN_SUBDIR}")
SET(Lua_INSTALL_LIB_SUBDIR "${Torch_INSTALL_LIB_SUBDIR}")
SET(Lua_INSTALL_INCLUDE_SUBDIR "${Torch_INSTALL_INCLUDE_SUBDIR}")
SET(Lua_INSTALL_LUA_PATH_SUBDIR "${Torch_INSTALL_LUA_PATH_SUBDIR}")
SET(Lua_INSTALL_LUA_CPATH_SUBDIR "${Torch_INSTALL_LUA_CPATH_SUBDIR}")
SET(Lua_INSTALL_BIN_RIDBUS "${Torch_INSTALL_BIN_RIDBUS}")
SET(Lua_INSTALL_FINDLUA_DIR "${Torch_BINARY_DIR}/cmake")

IF(WITH_LUA_JIT)
  ADD_SUBDIRECTORY(luajit)
ELSE(WITH_LUA_JIT)
  ADD_SUBDIRECTORY(lua)
ENDIF(WITH_LUA_JIT)

SET_TARGET_PROPERTIES(lua-static PROPERTIES OUTPUT_NAME "torch-lua-static")
GET_TARGET_PROPERTY(luac OUTPUT_NAME LUAC_EXISTS)
IF(LUAC_EXISTS)
  SET_TARGET_PROPERTIES(luac PROPERTIES OUTPUT_NAME "torch-luac")
ENDIF(LUAC_EXISTS)
SET_TARGET_PROPERTIES(liblua-static PROPERTIES OUTPUT_NAME "torch-lua-static")

# Update the include paths
FIND_PACKAGE(Lua REQUIRED)
SET(Torch_SOURCE_INCLUDES ${LUA_INCLUDE_DIR} ${Torch_SOURCE_INCLUDES} CACHE INTERNAL "")
